# fastapi-arch

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
database/: db_setup.py  db_utils.py
database/schemas/: base.py  courses.py  mixins.py  users.py
models/: defaultModels.py  users.py
providers/: traefik.yaml
routes/: courses.py  sections.py  users.py
