[tool.poetry]
name = "pyapi"
version = "0.0.1"
description = "New Projet With Poetry"
authors = ["LeSavantR <uniruben22@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.92.0"
pydantic = "^1.10.4"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
